Javscript coding was amended to fix the alert error, scoring error and to fix the totalling error. CSS coding was also adjusted to fix the container sizing, alignment of gemstones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,16 +4,17 @@ body {
         background-image: url(../images/robots.jpg);
        background-repeat: round;
        font-family: Arial, Helvetica, sans-serif;
+       margin-right: 15% !important;
+       margin-left: 15% !important;
       }
 
 
     .container {
         background-color: white;
-        margin-top: 15% !important;
-        
-     
-        
-    }
+        margin-top: 20% !important;
+        margin-bottom: 10% !important;
+         
+            }
   
  h1 {
     font-size: 40px;
@@ -29,7 +30,8 @@ body {
     max-width: 80%;
     height: auto;
       border-radius: 25%;
-   margin-left: 10;
+   margin-left: 10%;
+   margin-right: 5%;
    }
   
    h3 {
@@ -38,6 +40,7 @@ body {
   color: #e4dedeec !important;
   text-align: center;
   padding: 2%;
+  width: auto;
   }
 
   h2 {
@@ -46,4 +49,7 @@ body {
   color: #e4dedeec !important;
   text-align: center;
   padding: 2%;
+  padding: 25%;
   }
+
+  
